# dhbw-devops-quality-pipeline

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/input/: ARCHITECTURE.md  DECISION_LOG.md  chapter1.md  chapter2.md  chapter3.md  pipeline.mmd
scripts/: deploy_artifact.sh
src/pipeline_app/: cli.py  stats.py
tests/: test_cli.py  test_stats.py
